# OpenSayal

./: .gitignore  .gitmodules  CMakeLists.txt  OpenSayal.conf.json  README.md  sample_config.json
docs/: configuration.md
inc/: config.hpp  config.values.hpp  config_parser.hpp  fluid.cu  fluid.cuh  fluid.helper.cu  fluid.helper.hpp  fluid.hpp  graphics_handler.cu  graphics_handler.cuh  graphics_handler.hpp  helper.cu  helper.cuh  helper.hpp  logger.hpp  mouse.cuh  mouse.hpp  platform_setup.hpp
reports/: how_it_works.md  report.md
src/: config_parser.cpp  fluid.cpp  fluid.cu  graphics_handler.cpp  graphics_handler.cu  helper.cu  logger.cpp  main.cpp  main.cu  mouse.cpp  mouse.cu  platform_setup.cpp
